chore: PWA DEBUGGING

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,12 +1,11 @@
 ---
+title: Interview
 sidebar_position: 1
 ---
 
-import SEO from '../src/components/SEO'
+import SEO from '../src/components/SEO';
 
-<SEO/>
-
-# Interview
+<SEO />
 
 면접 준비를 위해 정리한 문서입니다.
 
