--- a/docs/operating-system/면접/선점형 스케줄링과 비선점형 스케줄링의 차이를 설명해주세요.mdx
+++ b/docs/operating-system/면접/선점형 스케줄링과 비선점형 스케줄링의 차이를 설명해주세요.mdx
@@ -6,7 +6,7 @@ sidebar_position: 4
 
 ## 선점형 스케줄링(Preemptive Scheduling)
 
-선점이란 **"남보다 앞서서 차지함"**을 의미한다.
+선점이란 `남보다 앞서서 차지함`을 의미한다.
 선점형 스케줄링은 프로세스가 CPU를 비롯한 자원을 사용하고 있더라도 운영체제가 프로세스로부터 자원을 강제로
 빼앗아 다른 프로세스에 할당할 수 있는 스케줄링 방식을 의미한다.
 
