chore: 운영체제 질문 목록 업데이트

--- a/docs/operating-system/면접/가상메모리.mdx
+++ b/docs/operating-system/면접/가상메모리.mdx
@@ -4,7 +4,7 @@ title: 가상 메모리
 
 # 가상 메모리
 
-가상 메모리는 물리 메모리의 크기와 상관없이 메모리를 이용할 수 있도록 지원한는 기술이다.
+가상 메모리는 물리 메모리의 크기와 상관없이 메모리를 이용할 수 있도록 지원하는 기술이다.
 프로그래머는 가상 메모리 덕분에 물리 메모리의 크기에 구애받지 않고 작업할 수 있는 커다란 공간을
 얻게 되는 셈이다. 즉, 가상 메모리는 크기가 다른 물리 메모리에서 일관되게 프로세스를 실행할 수 있는
 기술이다.
