docs: 문맥교환에 대해서 설명해주세요.

--- a/docs/operating-system/면접/프로세스와 스레드/3.프로세스의 상태.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/3.프로세스의 상태.mdx
@@ -1,7 +1,8 @@
 ---
-title: 프로세스의 상태 다이어그램에 대해서 설명해주세요.
+title: 프로세스의 상태에대해서 설명해주세요.
 description: 프로세스 상태 다이어그램
-sidebar_position: 2
+sidebar_position: 3
+slug: process-state
 ---
 
 import Image from '@site/src/components/Image';
