--- a/docs/operating-system/면접/프로세스와 스레드/4.문맥교환.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/4.문맥교환.mdx
@@ -2,6 +2,7 @@
 title: 컨텍스트 스위칭이 무엇인지 설명해주세요.
 description: temp
 sidebar_position: 4
+slug: context-switching
 ---
 
 프로세스의 상태 정보를 저장하고 복원하는 일련의 과정이다.
@@ -12,11 +13,11 @@ sidebar_position: 4
 프로세스는 각 독립된 메모리 영역을 할당받아서 사용하므로, 캐시 메모리 초기화와 같은 무거운 작업이
 진행되었을 때 오버헤드가 발생할 문제가 존재한다.
 
-{/\*
 하나의 프로세스를 실행하고 있는 상태에서 인터럽트 요청에 의해 다음
 우선 순위의 프로세스가 실행되어야 할 때 기존의 프로세스의 상태 또는 레지스터값(Context)를
 저장하고 CPU가 다음 프로세스를 수행하도록 새로운 프로세스의 상태 또는 레지스터값(Context)을 교체하는 작업을
 말한다.
 
+:::tip
 컨텍스트: CPU가 해당 프로세스를 실행하기 위한 해당 프로세스의 정보들
-\*/}
+:::
