--- a/docs/operating-system/면접/프로세스와 스레드/2.프로세스 제어 블록.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/2.프로세스 제어 블록.mdx
@@ -2,6 +2,7 @@
 title: PCB에 대해서 설명해주세요.
 description: 프로그램이 프로세스가 되려면 운영체제로부터 PCB를 받아야한다.
 sidebar_position: 2
+slug: process-control-block
 ---
 
 ## PCB
