--- a/docs/operating-system/면접/프로세스와 스레드/3.프로세스 상태 다이어그램.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/3.프로세스 상태 다이어그램.mdx
@@ -1,5 +1,5 @@
 ---
-title: 프로세스의 상태에대해서 설명해주세요.
+title: 프로세스 상태 다이어그램을 바탕으로 프로세스의 상태를 설명해주세요.
 description: 프로세스 상태 다이어그램
 sidebar_position: 3
 slug: process-state
