--- a/docs/operating-system/면접/프로세스와 스레드/5.사용자 스레드와 커널 스레드.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/5.사용자 스레드와 커널 스레드.mdx
@@ -26,9 +26,11 @@ CPU에 나누어 작업시키는 것이 가능하다. 그러나 커널 입장에
   width="600px"
 />
 
-커널 스레드는 커널이 멀티 스레드를 지원하는 방시긍로, 하나의 사용자 스레드가 하나의 커널 스레드와 연결되기
-때문에 1 to 1 모델이라고 부른다. 커널 스레드는 독립적으로 스케줄링이 되므로 특정 스레드가 대기 상태에 들어가도
-다른 스레드는 작업을 할 수 있다.
+<br />
+
+커널 스레드는 커널이 멀티 스레드를 지원하는 방시긍로, 하나의 사용자 스레드가 하나의
+커널 스레드와 연결되기 때문에 1 to 1 모델이라고 부른다. 커널 스레드는 독립적으로
+스케줄링이 되므로 특정 스레드가 대기 상태에 들어가도 다른 스레드는 작업을 할 수 있다.
 
 커널 스레드의 장단점은 사용자 스레드의 장단점과 반대라고 생각하면 된다.
 커널 스레드는 커널 레벨에서 모든 작업을 지원하기 때문에 멀티 CPU를 사용할 수 있고, 하나의 스레드가 대기 상태에
