docs: 교착 상태 보완

--- a/docs/operating-system/면접/입출력 시스템과 저장장치/RAID.mdx
+++ b/docs/operating-system/면접/입출력 시스템과 저장장치/RAID.mdx
@@ -3,7 +3,7 @@ title: RAID에 대해서 설명해주세요.
 description: 임시
 ---
 
-RAID(Redundant Array of Inexpensive/Independent Dist)란, 여러개의 저장장치를 묶어서
+RAID(Redundant Array of Inexpensive/Independent Disk)란, 여러개의 저장장치를 묶어서
 하나의 고용량/고성능 저장 장치처럼 사용하는 기술이다. 영어로 직역해서 표현하면, '저렴한/독립된 디스크의 복수배열'이라는
 의미를 갖는다. RAID는 여러개의 디스크를 배열하여 속도와 안정성, 효율성, 가용성증대를 하는데 쓰이는 기술이다.
 
