--- a/docs/operating-system/면접/프로세스 동기화/2.교착 상태.mdx
+++ b/docs/operating-system/면접/프로세스 동기화/2.교착 상태.mdx
@@ -1,5 +1,7 @@
 ---
 title: 교착 상태에 대해서 설명해주세요.
+slug: deadlock
+sidebar_position: 2
 ---
 
 import Image from '@site/src/components/Image';
@@ -16,22 +18,22 @@ import Image from '@site/src/components/Image';
 마치, 외나무 다리의 양 끝에서 서로가 비켜주기를 기다리고 있는 것과 같다.
 :::
 
-즉 둘이상의 프로세스가 다른 프로세스를 점유하고 있는 자원을 서로 기다릴 때 무한 대기에 빠지는 상황을 말한다.
+즉 둘이상의 프로세스가 다른 프로세스가 점유하고 있는 자원을 서로 기다릴 때 무한 대기에 빠지는 상황을 말한다.
 자원을 획득하지 못하고 있다는 점에서 기아 상태(starvation state)와 비슷하지만 이것은 영원히 헤어나올 수 없는
 상태라는 점에서 차이가 있다.
 
 ## 발생 조건
 
-1. 상호 배제(Mutual Exclusion): 한번에 프로세스 하나만 자원을 사용할 수 있다. 공유되지 않는 자원이란
+1. **상호 배제**(Mutual Exclusion): 한번에 프로세스 하나만 자원을 사용할 수 있다. 공유되지 않는 자원이란
    한번에 딱 하나의 프로세스만이 소유할 수 있는 자원이다. 만일 이 자원이 어떤 프로세스에게 할당되어 있는 중
    다른 프로세스가 이 자원에 할당을 요청(Request)하면 그 다른 프로세스는 현재 프로세스가 자원을 반환할 때까지
    대기 상태에 있게된다.
-2. 점유와 대기(Hold and Wait): 자원을 최소한 하나 보유하고, 다른 프로세스에 할당된 자원을 점유하기 위해
+2. **점유와 대기**(Hold and Wait): 자원을 최소한 하나 보유하고, 다른 프로세스에 할당된 자원을 점유하기 위해
    대기하는 프로세스가 존재해야한다.
-3. 비선점(Non Preemption): 이미 할당된 자원을 강제로 빼앗을 수 없다. 자원을 획득함에 있어서 우선권이 없다.
+3. **비선점**(Non Preemption): 이미 할당된 자원을 강제로 빼앗을 수 없다. 자원을 획득함에 있어서 우선권이 없다.
    그 어떤 프로세스도 다른 프로세스가 소유하고 있는 자원을 강제로 빼앗아 올 수 없다. 자원을 획득할 수 있는 유일한
    방법은 다른 어떤 프로세스도 해당 자원을 점유하고 있지 않을 때 뿐이다.
-4. 순환 대기(Circular Wait): 대기 프로세스의 집합이 순환 형태로 자원을 대기하고 있어야 한다. 프로세스들이
+4. **순환 대기**(Circular Wait): 대기 프로세스의 집합이 순환 형태로 자원을 대기하고 있어야 한다. 프로세스들이
    상대방이 필요한 자원을 점유한 상태로 상대방이 가지고 있는 자원을 요청하고 있는 상태이다. 예를 들어 프로세스 P1, P2,
    P3이 있다면 P1은 P2가 가지고 있는 자원이 해제 되길 기다리고, P2는 P3이 가진 자원, P3는 그다음..과 같은 형식으로
    가장 마지막 프로세스의 Pn가 다시 P1이 가진 자원을 요청하고 해제 되길 기다리는 형태가 아래 그림처럼 하나의 순환
