--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -11,12 +11,67 @@ import SEO from '../src/components/SEO';
 
 ## 운영체제
 
+### 운영체제 개요
+
+- (운영체제 커널에 대해서 설명해주세요.)[]
+
+### 프로세스와 스레드
+
+- [프로세스와 스레드에 대해서 설명해주세요.](https://bttb-interview.vercel.app/docs/operating-system/%EB%A9%B4%EC%A0%91/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EC%99%80%20%EC%8A%A4%EB%A0%88%EB%93%9C/process-vs-thread)
+- (프로세스 제어 블록에 대해서 설명해주세요.)[]
+- (프로세스 상태 다이어그램을 바탕으로 프로세스의 상태를 설명해주세요.)[]
+- (사용자 스레드와 커널 스레드에 대해서 설명해주세요.)[]
+- (스레드 안전(Thread Safe)란 무엇인지 설명해주세요.)[]
+- (동기와 비동기의 차이에 대해서 설명해주세요.)[]
+- (컴파일러와 인터프리터의 차이에 대해서 설명해주세요.)[]
+- (동시성과 병렬성에 대해서 설명해주세요.)[]
+- (Copy On Write 방식에 대해서 설명해주세요.)[]
+
+### 프로세스 동기화
+
+- (IPC에 대해서 설명해주세요.)[]
+- (컨텍스트 스위칭이 무엇인지 설명해주세요.)[]
+- (Deadlock, 교착상태에 대해서 설명해주세요.)[]
+- (선점형 스케줄링과 비선점형 스케줄링의 차이를 설명해주세요.)[]
+- (뮤텍스와 세마포어에 대해서 설명해주세요.)[]
+
+### 가상 메모리
+
+- (논리주소와 물리주소에 대해서 설명해주세요.)[]
+- (스왑영역이란 무엇인지 설명해주세요.)[]
+- (스레싱에 대해서 설명해주세요.)[]
+- (TLB에 대해서 설명해주세요.)[]
+- (페이징과 세그먼테이션 기법에 대해서 설명해주세요.)[]
+
 ## 네트워크
+
+- (google.com을 검색했을 때 일어나는 일을 설명해주세요.)[]
+- (TCP/IP에대해서 설명해주세요.)[]
+- (TCP의 3, 4 Way Handshaking에 대해서 설명해주세요.)[]
+- (TCP와 UDP의 차이점에 대해서 설명해주세요.)[]
+- (HTTP와 HTTPS의 차이점에 대해서 설명해주세요.)[]
+- (GET과 POST의 차이점에 대해서 설명해주세요.)[]
+- (RESTful이란 무엇이며, 이것에 대해서 아는대로 설명해주세요.)[]
 
 ## 컴퓨터 구조
 
 ## Web
 
+- (CORS에 대해 설명해주세요.)[]
+- (브라우저 렌더링 과정에 대해 설명해주세요.)[]
+- (CSR과 SSR의 차이점에 대해 설명해주세요.)[]
+
 ## JavaScript
 
+- (실행 컨텍스트에 대해서 설명해주세요.)[]
+- (V8 엔진의 가바지 컬렉션 동작 방식에 대해서 설명해주세요.)[]
+- (1 + 1 + '1'과 '1' + 1 + 1의 결과는 어떻게 나오며, 그 이유에 대해 설명해주세요.)[]
+
 ## React
+
+- (리액트 라이프사이클에 대해 아는대로 설명해주세요.)[]
+- (VirtualDOM에 대해 설명해주세요.)[]
+
+## Database
+
+- (관계형 DB와 비관계형 DB의 차이점에 대해서 설명해주세요.)[]
