docs: PCB에 페이지 테이블도 담긴다!

--- a/docs/operating-system/면접/프로세스와 스레드/4.프로세스 상태 다이어그램.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/4.프로세스 상태 다이어그램.mdx
@@ -25,7 +25,7 @@ import Image from '@site/src/components/Image';
 | 대기 상태(waiting)    | 실행 상태에 있는 프로세스가 입출력을 요청하면 입출력이 완료될 때까지 기다리는 상태이다. 입출력이 완료되면 준비 상태로 간다. | wakeup(PID): 대기 -> 준비                                                             |
 | 완료 상태(terminated) | 프로세스가 종료된 사앹이다. 사용하던 모든 데이터가 정리된다. 정상 종료인 exit와 비정상 종료인 abort를 포함한다.             | 메모리 삭제, PCB 삭제                                                                 |
 
-## Flow
+## State
 
 **생성 상태**는 프로그램이 메모리에 올라오고 운영체제로부터 프로세스 제어 블록을 할당받은 상태이다. 생성된
 프로세스는 바로 실행되는 것이 아니라 준비 상태에서 자기 순서를 기다리며, 프로세스 제어 블록도 같이 준비 상태로
