--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -13,19 +13,20 @@ import SEO from '../src/components/SEO';
 
 ### 운영체제 개요
 
-- (운영체제 커널에 대해서 설명해주세요.)[]
+- (커널에 대해서 설명해주세요.)[]
+- (이중모드에 대해서 설명해주세요.)[]
 
 ### 프로세스와 스레드
 
 - [프로세스와 스레드에 대해서 설명해주세요.](https://bttb-interview.vercel.app/docs/operating-system/%EB%A9%B4%EC%A0%91/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EC%99%80%20%EC%8A%A4%EB%A0%88%EB%93%9C/process-vs-thread)
 - [프로세스 제어 블록에 대해서 설명해주세요.](https://bttb-interview.vercel.app/docs/operating-system/%EB%A9%B4%EC%A0%91/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EC%99%80%20%EC%8A%A4%EB%A0%88%EB%93%9C/process-control-block)
-- (프로세스 상태 다이어그램을 바탕으로 프로세스의 상태를 설명해주세요.)[]
-- (사용자 스레드와 커널 스레드에 대해서 설명해주세요.)[]
-- (스레드 안전(Thread Safe)란 무엇인지 설명해주세요.)[]
-- (동기와 비동기의 차이에 대해서 설명해주세요.)[]
-- (컴파일러와 인터프리터의 차이에 대해서 설명해주세요.)[]
-- (동시성과 병렬성에 대해서 설명해주세요.)[]
-- (Copy On Write 방식에 대해서 설명해주세요.)[]
+- [프로세스 상태 다이어그램을 바탕으로 프로세스의 상태를 설명해주세요.]()
+- (사용자 스레드와 커널 스레드에 대해서 설명해주세요.)()
+- (스레드 안전(Thread Safe)란 무엇인지 설명해주세요.)()
+- (동기와 비동기의 차이에 대해서 설명해주세요.)()
+- (컴파일러와 인터프리터의 차이에 대해서 설명해주세요.)()
+- (동시성과 병렬성에 대해서 설명해주세요.)()
+- (Copy On Write 방식에 대해서 설명해주세요.)()
 
 ### 프로세스 동기화
 
