--- a/docs/operating-system/면접/운영체제 개요/1.커널.mdx
+++ b/docs/operating-system/면접/운영체제 개요/1.커널.mdx
@@ -1,5 +1,6 @@
 ---
-title: 운영체제 커널에 대해서 설명해주세요.
+title: 커널에 대해서 설명해주세요.
+sidebar_position: 1
 ---
 
 자원에 접근하고 조작하는 기능, 프로그램이 올바르고 안전하게 실행되게 하는 기능이 운영체제의 핵심
