--- a/docs/operating-system/면접/캐시.mdx
+++ b/docs/operating-system/면접/캐시.mdx
@@ -11,8 +11,8 @@ title: 캐시
 
 이 데이터 지역성은 대표적으로 시간 지역성(Temporal Locality)과 공간 지역성(Spatial Locality)으로 나뉜다.
 
-시간 지역성 : 최근에 참조된 주소의 내용은 곧 다음에 다시 참조되는 특성.
-공간 지역성 : 대부분의 실제 프로그램이 참조된 주소와 인접한 주소의 내용이 다시 참조되는 특성
+- 시간 지역성: 최근에 접근한 명령이나 데이터에 조만간 또 접근할 가능성이 높다는 개념이다.
+- 공간 지역성: 어떤 요소에 접근 한 상황이라면 그 주변의 요소들에 접근할 가능성이 높다는 개념이다.
 
 ## Reference
 
