--- a/docs/operating-system/면접/가상 메모리/페이징.mdx
+++ b/docs/operating-system/면접/가상 메모리/페이징.mdx
@@ -1,4 +1,8 @@
-# Paging
+---
+title: 페이징에 대해서 설명해주세요.
+---
+
+import Image from '@site/src/components/Image';
 
 고정 분할 방식으로 메모리를 분할하여 관리하는 페이징 기법에서 가상주소를
 물리 주소로 변환하는 방법과 매핑 테이블 관리 방법을 알아보자.
