--- a/docs/operating-system/면접/프로세스와 스레드/7.스레드안전.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/7.스레드안전.mdx
@@ -1,7 +1,7 @@
 ---
 title: 스레드 안전에 대해서 설명해주세요.
-description: temp
-sidebar_position: 4
+sidebar_position: 7
+slug: thread-safety
 ---
 
 # 스레드 안전(Thread Safety)
@@ -39,4 +39,4 @@ sidebar_position: 4
 
 ## Reference
 
-- (스레드 안전이란?)[https://developer-ellen.tistory.com/205#%EC%25-A%25A-%EB%25A-%25--%EB%25--%25-C%25--%EC%25--%25--%EC%25A-%25---Thread-Safety-]
+- [스레드 안전이란?](https://developer-ellen.tistory.com/205#%EC%25-A%25A-%EB%25A-%25--%EB%25--%25-C%25--%EC%25--%25--%EC%25A-%25---Thread-Safety-)
