docs: IPC, named pipe, anonymous pipe

--- a/docs/operating-system/면접/프로세스 동기화/1.IPC.mdx
+++ b/docs/operating-system/면접/프로세스 동기화/1.IPC.mdx
@@ -148,6 +148,14 @@ wait() 함수를 이용해서 자식 프로세스의 작업이 끝날 때까지 
 A가 파이프 1에 데이터를 쓰는 순간 자동으로 풀려 동기화가 이루어진. 프로세스 B는 바쁜 대기를 하지
 않아도 된다.
 
+파이프는 이름 없는 파이프와 이름있는 파이프로 나뉜다.
+
+- 이름 없는 파이프(anonymous pipe): 일반적으로 파이프라고하면 이름없는 파이프를 가리킨다.
+  부모와 자식 프로세스 혹은 같은 부모를 가진 자식 프로세스와 같이 서로 관련 있는 프로세스 간
+  통신에 사용된다.
+- 이름 있는 파이프: FIFO라 불리는 특수 파일을 이용하여 서로 관련 없는 프로세스 간 통신에
+  사용된다.
+
 ## 소켓을 이용한 통신
 
 여러 컴퓨터에 있는 프로세스끼리도 통신을 할 수 있다. 여러 컴퓨터에 있는 프로세스 간 통신을
