docs: 캐시 메모리 매핑기법

--- a/docs/operating-system/면접/캐시.mdx
+++ b/docs/operating-system/면접/캐시.mdx
@@ -14,6 +14,30 @@ title: 캐시
 - 시간 지역성: 최근에 접근한 명령이나 데이터에 조만간 또 접근할 가능성이 높다는 개념이다.
 - 공간 지역성: 어떤 요소에 접근 한 상황이라면 그 주변의 요소들에 접근할 가능성이 높다는 개념이다.
 
+## 캐시메모리 매핑기법
+
+### 직접 매핑
+
+메모리 주소와 캐시의 순서를 일치시킨다. 메모리가 1~100까지 있고 캐시가 1~10까지 있다면
+1~10까지의 메모리는 캐시의 1에 위치하고 11~20까지의 메모리는 캐시의 2에 위치시킨다.
+
+구현이 간단하지만 저 규칙을 만족시켜서 캐시를 넣다 보면 캐시가 효율적이지 않게 자꾸
+교체되어야 하는 일이 생긴다.
+
+쉽게 말하면 메인메모리와 캐시를 똑같은 크기로 나누고 순서대로 매핑하는 것을 말한다.
+
+### 연관 매핑
+
+순서를 일치시키지 않는다. 필요한 메모리 값을 캐시의 어디든 편하게 저장될 수 있다.
+당연히 찾는 과정은 복잡하고 느릴 수 있지만 정말 필요한 캐시들 위주로 저장할 수 있기 때문에
+적중률은 높다. 캐시가 일반 메모리보다 속도가 훨씬 빠르므로 캐시의 검색량을 신경쓰는 것보단
+적중률이 높은게 성능이 더 좋다.
+
+### 직접 연관 매핑(Set Associative Mapping)
+
+연관 매핑에 직접 매핑을 합쳐 놓은 방식이다. 순서를 일치시키고 편하게 저장하되, 일정 그룹을
+두어 두 그룹 내에서 편하게 저장시키는 것이다.
+
 ## Reference
 
 - [캐시의 지역성](https://github.com/JaeYeopHan/Interview_Question_for_Beginner/tree/master/OS#%EC%BA%90%EC%8B%9C%EC%9D%98-%EC%A7%80%EC%97%AD%EC%84%B1)
