--- a/docs/operating-system/면접/CPU 스케줄링/1.선점형 스케줄링과 비선점형 스케줄링의 차이를 설명해주세요.mdx
+++ b/docs/operating-system/면접/CPU 스케줄링/1.선점형 스케줄링과 비선점형 스케줄링의 차이를 설명해주세요.mdx
@@ -1,8 +1,10 @@
 ---
 title: 선점형 스케줄링과 비선점형 스케줄링의 차이를 설명해주세요.
 description: 운영체제가 프로세스의 CPU 점유에 개입하는 방식인 스케줄링 방식에 대하여 알아보자.
-sidebar_position: 4
+sidebar_position: 1
 ---
+
+# 선점형 스케줄링과 비선점형 스케줄링
 
 ## 선점형 스케줄링(Preemptive Scheduling)
 
