docs: deadlock 내용 보완

--- a/docs/operating-system/면접/가상 메모리/3.페이징.mdx
+++ b/docs/operating-system/면접/가상 메모리/3.페이징.mdx
@@ -14,10 +14,7 @@ import Image from '@site/src/components/Image';
 항상 0번지부터 시작한다. 가상 주소의 분할된 각 영역은 페이지라고 부르며
 첫 번째 영역은 페이지 0, 두번째 영역은 페이지 1과 같이 번호를 매겨 관리한다.
 
-<Image
-  src="https://media.vlpt.us/images/chappi/post/18f268bd-8da3-492a-b672-4f942a138294/3.png"
-  width="800px"
-/>
+<Image src="https://media.vlpt.us/images/chappi/post/18f268bd-8da3-492a-b672-4f942a138294/3.png" width="800px" />
 
 물리 메모리의 각 영역은 가상 주소의 페이지와 구분하기 위해 프레임이라고 부른다.
 프레임도 페이지와 마찬가지로 번호를 매겨서 관리하고 이 둘의 크기는 같다.
@@ -38,10 +35,7 @@ import Image from '@site/src/components/Image';
 
 아래 그림은 페이징 기법에서 가상 주소가 물리 주소로 어떻게 변환되는지 보여준다.
 
-<Image
-  src="https://media.vlpt.us/images/chappi/post/e86d6063-3a61-470c-9473-d4211e091a5e/4.png"
-  width="800px"
-/>
+<Image src="https://media.vlpt.us/images/chappi/post/e86d6063-3a61-470c-9473-d4211e091a5e/4.png" width="800px" />
 
 메모리는 1Byte 기준으로 작성된다. 페이지와 프레임의 각 크기를 10byte로 잡아놓으면,
 총 10개의 주소를 저장할 수 있다. 즉, 페이지 0에는 0~9번지의 10개의 주소가 있고,
