--- a/docs/operating-system/면접/프로세스 동기화/4.교착 상태.mdx
+++ b/docs/operating-system/면접/프로세스 동기화/4.교착 상태.mdx
@@ -1,7 +1,7 @@
 ---
 title: 교착 상태에 대해서 설명해주세요.
 slug: deadlock
-sidebar_position: 2
+sidebar_position: 4
 ---
 
 import Image from '@site/src/components/Image';
@@ -21,6 +21,11 @@ import Image from '@site/src/components/Image';
 즉 둘이상의 프로세스가 다른 프로세스가 점유하고 있는 자원을 서로 기다릴 때 무한 대기에 빠지는 상황을 말한다.
 자원을 획득하지 못하고 있다는 점에서 기아 상태(starvation state)와 비슷하지만 이것은 영원히 헤어나올 수 없는
 상태라는 점에서 차이가 있다.
+
+두 프로세스가 서로 종료될 때까지 대기하는 프로그램을 실행한다고 생각해보자. 프로세스 A는 B가 종료될 떄까지,
+프로세스 B는 A가 종료될 때까지 작업을 하지 않기 때문에 프로그램은 어떤 동작도 하지 못한다. 이처럼 두 프로세스가
+리소스를 점유하고 놓아주지 않거나, 어떠한 프로세스도 리소스를 점유하지 못하는 상태가 되어 프로그램이 멈추는 현상을
+데드락(Deadlock)이라고 한다. 운영체제도 결국 소프트웨어이기 때문에 데드락에 빠질 수 있다.
 
 ## 발생 조건
 
