docs: 페이징, 세그먼테이션 보완

--- a/docs/network/ARP.mdx
+++ b/docs/network/ARP.mdx
@@ -18,7 +18,7 @@ Address와 매칭하여 목적지 IP의 단말이 소유한 MAC 주소를 향해
 
 ## LAN(Local Area Network)
 
-LAN, **ARP Request가 미치는 영역**
+**ARP Request가 미치는 영역**
 
 근거리 통신망, 로컬 네트워크, 구내 정보 통신망은 네트워크 매체를 이용하여 집, 사무실, 학교 등의
 건물과 같은 가까운 지역을 묶는 컴퓨터 네트워크이다.
