--- a/docs/operating-system/면접/가상 메모리/2.세그먼테이션.mdx
+++ b/docs/operating-system/면접/가상 메모리/2.세그먼테이션.mdx
@@ -1,3 +1,9 @@
+---
+title: 세그먼테이션에 대해서 설명해주세요.
+---
+
+import Image from '@site/src/components/Image';
+
 페이징 기법과 마찬가지로 메모리 관리 측면에서 가장 중요한 것은 사용자 관점에서의
 메모리와 실제 메모리를 분리하는 것이다. 지금까지 바왔듯 사용자 관점의 메모리는 실제 메모리와 같지 않고,
 매핑(mapped)된다. 이러한 매핑을 통해 논리적 메모리와 물리적 메모리를 구분할 수 있다.
