docs: 페이지 테이블

--- a/docs/operating-system/면접/가상 메모리/3.페이징.mdx
+++ b/docs/operating-system/면접/가상 메모리/3.페이징.mdx
@@ -23,7 +23,17 @@ import Image from '@site/src/components/Image';
 
 프로세스가 메모리에 불연속적으로 배치되어 있다면 CPU 입장에서는 이를 순차적으로 실행할 수가 없다.
 프로세스를 이루는 페이지가 어느 프레임에 적재되어 있는지 CPU가 모두 알고 있기 어렵기 때문이다.
-즉, 프로세스가 메모리에 불연속적으로 배치되면 CPU 입장에서 다음에 실행할 명령어를 찾기가 어려워진다.
+즉, **프로세스가 메모리에 불연속적으로 배치되면 CPU 입장에서 다음에 실행할 명령어를 찾기가 어려워진다.**
+
+이를 해결하기 위해 페이징 시스템은 프로세스가 비록 **물리 주소에 불연속적으로 배치되더라도 논리 주소에는
+연속적으로 배치되도록** `페이지 테이블`을 이용한다.
+
+페이지 테이블은 페이지 번호와 프레임 번호를 짝지어 주는 일종의 이정표이다. CPU로 하여금 페이지 번호만
+보고 해당 페이지가 적재된 프레임을 찾을 수 있게 한다. 다시 말해 페이지 테이블은 어떤 페이지가 어떤
+프레임에 할당되었는지를 알려준다.
+
+프소세스들이 분산되어 저장되어 있더라도 CPU 입장에서 바라본 논리 주소는 연속적으로 보일 수 있다.
+즉 **프로세스들이 메모리에 분산되어 저장되어 있더라도 CPU는 논리 주소를 그저 순차적으로 실행**하면 된다.
 
 ## 페이지 교체(Page Replacement)
 
