22-04-30 TLB 내용 보완

--- a/docs/operating-system/면접/가상 메모리/3.페이징.mdx
+++ b/docs/operating-system/면접/가상 메모리/3.페이징.mdx
@@ -35,6 +35,13 @@ import Image from '@site/src/components/Image';
 프소세스들이 분산되어 저장되어 있더라도 CPU 입장에서 바라본 논리 주소는 연속적으로 보일 수 있다.
 즉 **프로세스들이 메모리에 분산되어 저장되어 있더라도 CPU는 논리 주소를 그저 순차적으로 실행**하면 된다.
 
+프로세스마다 각자의 프로세스 테이블을 가지고 있고 각 프로세스의 페이지 테이블들은 메모리에 적재된다.
+그리고 CPU 내의 페이지 테이블 베이스 레지스터(PTBR; Page Table Base Register)는 각
+프로세스의 페이지 테이블이 적재된 주소를 가리키고 있다.
+
+각 프로세스의 페이지 테이블 정보들은 각 프로세스의 PCB에 기록된다. 그리고 프로세스의 문맥 교환이
+일어날 때 다른 레지스터와 마찬가지로 함께 변경된다.
+
 ## 페이지 교체(Page Replacement)
 
 원하는 페이지가 물리 메모리에 존재하지 않으면 어쩔 수 없이 어떤 페이지는 내려놔야 한다.
