docs: 네트워크 면접 폴더 생성

--- a/docs/network/면접/CDN.mdx
+++ b/docs/network/면접/CDN.mdx
@@ -1,6 +1,10 @@
+---
+title: CDN에 대해서 설명해주세요.
+---
+
 import Image from '@site/src/components/Image';
 
-# CDN이란?
+# CDN
 
 **CDN**(Content Delivery Network)이란 데이터 사용량이 많은 애플리케이션의
 웹 페이지 로드 속도를 높이는 상호 연결된 서버 네트워크이다.
