--- a/docs/network/면접/HTTP와 HTTPS.mdx
+++ b/docs/network/면접/HTTP와 HTTPS.mdx
@@ -1,4 +1,51 @@
-# HTTP vs HTTPS
+---
+title: HTTP와 HTTPS의 차이점에 대해서 설명해주세요.
+---
+
+import Image from '@site/src/components/Image';
+
+## HTTP
+
+HTTP란 HyperText Transfer Protocol의 약자로, 서버/클라이언트 모델을 따라 데이터를 주고
+받기 위한 프로토콜이다.
+
+HTTP는 애플리케이션 레벨의 프토토콜로 TCP/IP 위에서 작동한. HTTP는 상태를 가지고 있지 않은
+무상태 프로토콜이다.
+
+HTTP는 암호화가 되지 않은 평문 데이터를 전송하는 프로토콜이기 떄문에, HTTP로 비밀번호나 주민번호를
+주고 받으면 제 3자가 조회할 수 있다. 이러한 문제를 해결하기 위해 HTTPS가 등장하게 되었다.
+
+## HTTPS
+
+HyperText Transfer Protocol over Secure Socket Layer는 HTTP에 데이터 암호화가 추가된
+프로토콜이다. HTTPS는 HTTP와 다르게 443번 포트를 사용하며, 네트워크 상에서 중간에 제 3자가 정보를
+볼 수 없도록 암호화를 지원하고 있다.
+
+HTTPS는 대칭키 암호화와 비대칭키 암호화를 모두 사용하여 빠른 연산속도와 안정성을 모두 얻고 있다.
+HTTPS 연결 과정(Hand-Shaking)에서는 먼저 서버와 클라이언트 간에 세션키를 교환한다.
+
+여기서 세션키는 주고 받는 데이터를 암호화하기 위해 사용되는 대칭키이며, 데이터 간의 교환에는
+빠른 연산 속도가 필요하므로 세션키는 대칭키로 만든다.
+
+문제는 이 세션키를 클라이언트와 서버가 어떻게 교환할 것이냐 인데, 이 과정에서 비대칭키가 사용된다.
+
+즉, 처음 연결을 성립하여 안전하게 세션키를 공유하는 과정에서 비대칭키가 사용되는 것이고, 이후에
+데이터를 교환하는 과정에서 빠른연산 속도를 위해 대칭키가 사용되는 것이다.
+
+<Image src="https://user-images.githubusercontent.com/63354527/235432805-26c81a65-6179-4a86-8d61-b76ba7e933c0.png" />
+
+실제 HTTPS 연결 과정이 성립되는 흐름을 살펴보면 다음과 같다.
+
+1. 클라이언트(브라우저)가 서버로 최초 연결을 시도함
+2. 서버는 공개키(엄밀히는 인증서)를 브라우저에게 넘겨줌
+3. 브라우저는 인증서의 유효성을 검사하고 세션키를 발급함
+4. 브라우저는 세션키를 보관하며 추가로 서버의 공개키로 세션키를 암호화하여 서버로 전송함
+5. 서버는 개인키로 암호화된 세션키를 복호화하여 세션키를 얻음
+6. 클라이언트와 서버는 동일한 세션키를 공유하므로 데이터를 전달할 때 세션키로 암호화/복호화를 진행함
+
+<Image src="https://user-images.githubusercontent.com/63354527/235433449-f9a3f3fc-de10-4d71-a9ea-66da59afdfca.png" />
+
+## HTTP vs HTTPS
 
 SSL과 TLS는 '보안 계층'이라는 독립적인 프로토콜 계층을 만들어 응용 계층과 전송 계층 사이에 속하게된다.
 
@@ -13,4 +60,6 @@ TCP 기반이기 때문에 SSL 핸드셰이크 전에 TCP 3 way handshake 또한
 
 ## Reference
 
+- [HTTP와 HTTPS의 개념 및 차이점](https://mangkyu.tistory.com/98)
 - [웹 사이트 보안을 위한 방법, SSL이란?](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=skinfosec2000&logNo=222135874222)
+- [대칭키, 공개키 방식과 SSL(TLS)](https://preamtree.tistory.com/38)
