docs: 가비지 컬렉션 보완

--- a/docs/javascript/가비지 컬렌션.mdx
+++ b/docs/javascript/가비지 컬렌션.mdx
@@ -1,8 +1,12 @@
+---
+title: 가비지 컬렉션에 대해서 설명해주세요.
+---
+
 import Image from '@site/src/components/Image';
 
 # 가비지 컬렉션
 
-자바스크립트는 도달 가능성(reachability)이라는 개념을 사용해 메모리 관리를 수행한다.
+자바스크립트는 `도달 가능성(reachability)`이라는 개념을 사용해 메모리 관리를 수행한다.
 도달 가능한 값은 쉽게 말해 어떻게든 접근하거나 사용할 수 있는 값을 의미한다.
 도달 가능한 값은 메모리에서 삭제되지 않는다.
 
@@ -25,7 +29,7 @@ import Image from '@site/src/components/Image';
 
 ## 메모리 구조(V8 엔진)
 
-프로그램을 실행하면 메모리의 Resident Set이라는 빈 공간이 할당됩니다. Resident Set은
+프로그램을 실행하면 메모리의 Resident Set이라는 빈 공간이 할당된다. Resident Set은
 스택 영역과 힙 영역으로 나눌 수 있다. 자바스크립트의 경우 싱글스레드라서 스택 메모리를 하나만
 가진다. 스택은 함수 호출이 끝난 후 OS에 의해 정리되지만, 힙 메모리는 그렇지 않다. 따라서
 힙에 있는 쓸모없는 메모리가 해제되지 않는다면, 메모리 누수가 발생하여 프로그램 속도가 느려진다.
@@ -133,6 +137,8 @@ Old Space를 검사하는 메이저 GC는 Mark Sweep Compact 알고맂므과 Tri
 
 ## Mark and Sweep
 
+<Image src="https://user-images.githubusercontent.com/63354527/236189504-dcdf1338-765f-44ee-908a-dd201cb060f4.png" />
+
 - 가비지 컬렉터는 루트(root)정보를 수집하고 이를 mark(기억)한다.
 - 루트가 참조하고 있는 모든 객체를 방문하고 이것들을 'mark'한다.
 - mark된 모든 객체에 방문하고 그 객체들이 참조하는 객체도 mark한다.
@@ -144,8 +150,8 @@ Old Space를 검사하는 메이저 GC는 Mark Sweep Compact 알고맂므과 Tri
 최적화 기법을 적용한다.
 
 - generational collection(세대별 수집): 객체를 새로운 객체와 오래된 객체로 나눈다.
-  객체 상당수는 생성 이후 제 역할을 빠르게 수행해 금방 쓸모가 없어지는데, 이런 객체들을 새로운 객체로
-  구분한다. 가비지 컬렉터는 이런 객체를 공격적으로 메모리에서 제거한다.
+  **객체 상당수는 생성 이후 제 역할을 빠르게 수행해 금방 쓸모가 없어지는데, 이런 객체들을 새로운 객체로
+  구분**한다. 가비지 컬렉터는 이런 객체를 공격적으로 메모리에서 제거한다.
 - incremental collection(점진적 수집): 방문해야 할 객체가 많다면 모든 객체를 한 번에 방문하고 mark하는데
   상당한 시간이 소모된다. 가비지 컬렉션에 많은 리소스가 사용되어 실행속도도 눈에 띄게 느려진다.
   자바스크립트 엔진은 이런 현상을 개선하기 위해 가비지 컬렉션을 여러 부분으로 분리한 다음, 각 부분을 별도로
