--- a/docs/network/면접/HTTP.mdx
+++ b/docs/network/면접/HTTP.mdx
@@ -2,8 +2,15 @@
 title: HTTP 프로토콜에 대해서 설명해주세요.
 ---
 
-HTTP는 하이퍼 텍스트 전송 프로토콜(HyperText Transfer Protocol)로 인터넷상에서
-데이터를 주고 받기 위한 서버/클라이언트 모델을 따르는 프로토콜이다.
+`HTTP(HyperText Transfer Protocol)`는 HTML과 같은 **하이퍼 미디어 문서들을
+전송하는데 사용되는 애플리케이션 계층 프로토콜**이다. 브라우저와 서버 간의 통신을 위해
+설계 되었지만, 다른 목적으로 사용될 수도 있다.
+
+:::info
+`HyperText`: 다른 문서나 텍스트로 이동할 수 있는 링크를 담고 있는 텍스트  
+`Transfer`: 전송  
+`Protocol`: 컴퓨터들 간의 데이터를 전송할 때 지켜야하는 규칙
+:::
 
 ## 비연결성(Connectionless)
 
@@ -18,8 +25,8 @@ HTTP는 통신 시 정보를 한 번씩 주고받은 후 바로 끊는 형태로
 ## GET과 POST 비교
 
 우선 GET 방식은 요청하는 데이터가 HTTP Request Message의 Header
-부분에 url이 담겨져서 전송된. 때문에 url 상에 ? 뒤에 데이터가 붙어
-request를 보내게 된다. 이러한 방식은 url이라는 공간에 담겨가기 때문에
+부분에 url이 담겨져서 전송된. 때문에 URL 상에 ? 뒤에 데이터가 붙어
+request를 보내게 된다. 이러한 방식은 URL이라는 공간에 담겨가기 때문에
 전송할 수 있는 데이터의 크기가 제한적이다. 또 보안이 필요한 데이터에 대해서는
 데이터가 그대로 URL상에 노출되므로 GET 방식은 적절하지 않다.
 
