docs: RESTful API

--- a/docs/network/면접/HTTP.mdx
+++ b/docs/network/면접/HTTP.mdx
@@ -25,10 +25,12 @@ HTTP는 통신 시 정보를 한 번씩 주고받은 후 바로 끊는 형태로
 ## GET과 POST 비교
 
 우선 GET 방식은 요청하는 데이터가 HTTP Request Message의 Header
-부분에 url이 담겨져서 전송된. 때문에 URL 상에 ? 뒤에 데이터가 붙어
+부분에 URL에 담겨져서 전송된다. 때문에 URL 상에 ? 뒤에 데이터가 붙어
 request를 보내게 된다. 이러한 방식은 URL이라는 공간에 담겨가기 때문에
 전송할 수 있는 데이터의 크기가 제한적이다. 또 보안이 필요한 데이터에 대해서는
 데이터가 그대로 URL상에 노출되므로 GET 방식은 적절하지 않다.
+
+GET은 서버에게 여러번 요청을 하더라도 동일한 응답이 돌아와야 한다.(멱등성)
 
 POST 방식의 request는 HTTP Request Message의 Body 부분에
 데이터가 담겨져서 전송된다. 때문에 바이너리 데이터를 요청하는 경우 POST
