docs: 공룡책 Context Switching

--- a/docs/operating-system/면접/운영체제 개요/1.커널.mdx
+++ b/docs/operating-system/면접/운영체제 개요/1.커널.mdx
@@ -12,6 +12,18 @@ slug: kernel
 
 운영체제가 제공하는 서비스 중 커널에 포함되지 않는 서비스도 있는데 대표적으로 사용자 인터페이스가 있다.
 
+## 커널의 역할
+
+운영체제의 커널은 자원을 효율적으로 관리하기 위해서 CPU 스케줄링, 메모리 관리, 입출력관리,
+파일 시스템 관리를 수행한다.
+
+운영체제는 여러 프로그램이 동시에 실행될 수 있는 다중 프로그래밍 환경에서 동작한다.
+각 프로그램들이 다른 프로그램 실행에 방해되거나 충돌이 발생하는 문제를 방지하기 위해
+하드웨어에 대한 각종 보안법들을 필요로 한다.
+
+이를 위해 운영체제는 사용자 모드(User Mode)와 커널 모드(Kernel Mode)가 제공되는
+이중 동작 모드 기법을 사용한다.
+
 ## Reference
 
 - 혼자 공부하는 운영체제
