--- a/docs/operating-system/면접/프로세스와 스레드/1.프로세스와 스레드.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/1.프로세스와 스레드.mdx
@@ -2,7 +2,7 @@
 title: 프로세스와 스레드의 차이에 대해서 설명해주세요.
 description: 운영체제가 시스템의 자원을 어떤 단위로 할당하고 이 자원을 어떻게 사용하느냐에 대한 질문입니다.
 sidebar_position: 1
-slug: process-vs-thread
+# slug: process-vs-thread
 ---
 
 ## 질문의 의도
