--- a/docs/operating-system/공룡책/프로세스.mdx
+++ b/docs/operating-system/공룡책/프로세스.mdx
@@ -301,3 +301,63 @@ Google의 Chorme 웹 브라우저는 다중 프로세스 구조를 활용하여 
   src="https://github.com/back-to-the-basic/interview/assets/63354527/cf5c8b28-3252-4292-912e-0f1dc967aa9f"
   width="500px"
 />
+
+## 공유 메모리 시스템에서의 프로세스 간 통신
+
+공유 메모리를 사용하는 프로세스 간 통신에서는 통신하는 프로세스들이 공유 메모리 영역을 구축해야한다. 통상 공유 메모리 영역은 공유 메모리 세그먼트를 생성하는 프로세스의 주소 공간에 위치한다. 이 공유 메모리 세그먼트를 이용하여 통신하고자하는 다른 프로세스들은 이 세그먼트를 자신의 주소 공간에 추가하여야 한다.
+
+일반적으로 운영체제는 한 프로세스가 다른 프로세스의 메모리에 접근하는 것을 금지한다. 공유 메모리는 둘 이상의 프로세스가 이 제약 조건을 제거하는 것에 동의하는 것을 필요로 한다. 그런 후에 프로세스들은 공유 영역에 읽고 씀으로써 정보를 교환할 수 있다. 데이터의 형식과 위치는 이들 프로세스에 의해 결정되며 운영체제의 소관이 아니다. 또한 프로세스들은 동시에 동일한 위치에 쓰지 않도록 책임져야 한다.
+
+생산자 소비자 문제를 생각해보자. 생산자 프로세스는 정보를 생산하고 소비자 프로세스는 정보를 소비한다. 예를 들어 컴파일러는 어셈블리 코드를 생산하고, 어셈블러는 이것을 소비한다. 어셈블러는 이어 목적 모듈(object module)을 생산할 수 있고, loader는 이들을 소비한다.
+
+생산자 소비자 문제의 하나의 해결책은 공유 메모리를 사용하는 것이다. 생산자와 소비자 프로세스들이 병행으로 실행되도록 하려면, 생산자가 정보를 채워 넣고 소비자가 소모할 수 있는 항목들의 버퍼가 반드시 사용 가능해야 한다. 이 버퍼는 생산자와 소비자가 공유하는 메모리 영역에 존재하게 된다. 생산자가 한 항목을 생산하고, 그 동안에 소비자는 다른 항목을 소비할 수 있다. 생산자와 소비자가 반드시 동기화되어야 생산되지도 않은 항목들을 소비자가 소비하려고 시도하지도 않을 것이다.
+
+두가지 유형의 버퍼가 사용된다. 부한 버퍼(unbounded buffer)의 생산자 소비자 문제에서는 버퍼의 크기에 실질적인 한계가 없다. 소비자는 새로운 항목을 기다려야만 할 수도 있지만, 생산자는 항상 새로운 항목을 생산할 수 있다. 유한 버퍼(bounded buffer)는 버퍼의 크기가 고정되어 있다고 가정한다. 이 경우 버퍼가 비어있으면 소비자는 반드시 대기해야 하며, 모든 버퍼가 채워져 있으면 생산자가 대기해야 한다.
+
+## 메시지 전달 시스템에서의 프로세스 간 통신
+
+메시지 전달 방식은 동일한 주소 공간을 공유하지 않고도 프로세스들이 통신을 하고, 그들의 동작을 동기화할 수 있도록 허용하는 기법을 제공한다. 메시지 전달 방식은 통신하는 프로세스들이 네트워크에 의해 연결된 다른 컴퓨터들에 존재할 수 있는 분산 환경에서 특히 유용하다. 메시지 전달 시스템은 최소한 두 가지 연산을 제공한다.
+
+- send(mesage)
+- receive(message)
+
+프로세스가 보낸 메시지는 고정 길이일 수도 있도 가변 길이일 수도 있다. 고정 길이 메시지만 보낼 수 있다면, 시스템 수준의 구현은 직선적이다. 그렇지만, 이러한 제한은 프로그래밍 작업을 더 힘들게 한다. 반면에 가변 길이 메시지는 보다 복잡한 시스템의 구현이 있어야 하지만 프로그래밍 작업은 더 간단해지낟. 이러한 일은 운영체제 전반에 걸쳐 흔히 볼 수 있는 교환이다.
+
+만약 프로세스 P와 Q가 통신을 원하면 반드시 서로 메시지를 보내고 받아야 한다. 이들 사이에 통신 연결(communication link)가 설정되어야 한다. 이 연결은 다양한 방법으로 구현할 수 있다. 우리는 연결의 물리적인 구현에 관심이 있는 것이 아니라, 논리적인 구현에 관심이 있다. 하나의 링크와 send()/ receive() 연산을 논리적으로 구현하는 다수의 방법은 다음과 같다.
+
+- 직접 또는 간접 통신
+- 동기식 또는 비동기식 통신
+- 자동 또는 명시적 버퍼링
+
+### Naming
+
+통신을 원하는 프로세스들은 서로를 가리킬 방법이 있어야 한다. 이들은 간접 통신 또는 직접 통신을 할 수 있다. 직접 통신에서 통신을 원하는 프로세스는 통신의 수신자 또는 송신자의 이름을 명시해야 한다.
+
+- send(P, message): 프로세스 P에 메시지를 전송한다.
+- receive(Q, message): 프로세스 Q로부터 메시지를 수신한다.
+
+이 기법에서 통신 연결은 다음의 특성을 가진다.
+
+- 통신을 원하는 각 프로세스의 쌍들 사이에 연결이 자동으로 구축된다. 프로세스들은 통신하기 위해 상대방의 신원만 알면 된다.
+- 연결은 정확히 두 프로세스 사이에만 연관된다.
+- 통신하는 프로세스들의 각 쌍 사이에는 정확하게 하나의 연결이 존재해야 한다.
+
+이 기법은 주소 방식에서 대칭성을 보인다. 즉, 송신자와 수신자 프로세스 모두 통신하려면 상대방의 이름을 제시해야 한다. 이 기법의 변형으로서 주소 지정 시에 비대칭을 사용할 수도 있다. 송신자만 수신자의 이름을 지명하며, 수신자는 송신자의 이름을 제시할 필요가 없다.
+
+- send(P, message): 메시지를 프로세스 P에 전송한다.
+- receive(id, message): 임의의 프로세스로부터 메시지를 수신한다. 변수 id는 통신을 발생시킨 프로세스의 이름으로 설정된다.
+
+이들 기법(대칭적 그리고 비대칭적) 모두 프로세스를 지정하는 방식 때문에 모듈성을 제한한다는 것이 단점이다. 프로세스의 이름을 바꾸면 모두 다른 프로세스 지정 부분을 검사할 필요가 있다. 옛 이름들에 대한 모든 참조를 반드시 찾아서 새로운 이름으로 변경해야 할 것이다. 이러한 하드 코딩(hard-coding)기법은, 이 상황에서는 신원을 명시적으로 표시해야 한다.
+
+간접 통신에서 메시지들은 메일 박스(mailbox) 또는 포트(port)로 송신되고, 그것으로부터 수신된다. 메일박스는 추상적으로 프로세스들에 의해 메시지들이 넣어지고, 메시지들이 제거될 수 있는 객체라고도 볼 수 있다. 각 메일 박스는 고유의 id를 가진다. 예를 들어 POSIX 메시지 큐는 메일박스를 식별하기 위해서 정수 값을 사용한다. 이 기법에서 프로세스는 다수의 상이한 메일박스를 통해 다른 프로세스들과 통신할 수 있다. 두 프로세스들이 공유 메일박스를 가질 때만 이들 프로세스가 통신할수 있다.
+
+- send(A, message): 메시지를 메일박스 A로 송신
+- receive(A, message): 메시지를 메일박스 A로부터 수신
+
+이 방법에서 통신 연결은 다음 성질을 지닌다.
+
+- 한 쌍의 프로세스들 사이의 연결은 이들 프로세스가 공유 메일박스를 가질 때만 구축된다.
+- 연결은 두 개 이상의 프로세스들과 연관될 수 있다.
+- 통신하고 있는 각 프로세스 사이에서 다수의 서로 다른 연결이 존재할 수 있고, 각 연결은 하나의 메일박스에 대응된다.
+
+메일박스는 한 프로세스 또는 운영체제에 의해 소유될 수 있다. 새로운 메일박스를 생성하는 프로세스는 디폴트로 메일박스의 소유자가 된다. 초기에는 소유자만이 이 메일박스를 통해 메시지를 수신할 수 있는 유일한 프로세스이다. 그러나 소유권과 수신 특권은 적절한 시스템 콜을 통해 다른 프로세스에 전달될 수 있다. 물론 이런 규칙으로 인해 메일박스마다 복수의 수신자들을 낳을 수 있다.
