--- a/docs/operating-system/공룡책/프로세스.mdx
+++ b/docs/operating-system/공룡책/프로세스.mdx
@@ -361,3 +361,22 @@ Google의 Chorme 웹 브라우저는 다중 프로세스 구조를 활용하여 
 - 통신하고 있는 각 프로세스 사이에서 다수의 서로 다른 연결이 존재할 수 있고, 각 연결은 하나의 메일박스에 대응된다.
 
 메일박스는 한 프로세스 또는 운영체제에 의해 소유될 수 있다. 새로운 메일박스를 생성하는 프로세스는 디폴트로 메일박스의 소유자가 된다. 초기에는 소유자만이 이 메일박스를 통해 메시지를 수신할 수 있는 유일한 프로세스이다. 그러나 소유권과 수신 특권은 적절한 시스템 콜을 통해 다른 프로세스에 전달될 수 있다. 물론 이런 규칙으로 인해 메일박스마다 복수의 수신자들을 낳을 수 있다.
+
+### 동기화
+
+프로세스 간의 통신은 send와 receive 프리미티브에 대한 호출에 의해 발생한다. 각 프리미티브를 구현하기 위한 서로 다른 설계 옵션이 있다. 메시지 전달은 blocking 이거나 non-blocking방식으로 전달된다. 이 두가지 방식은 동기식, 비동시식이라고도 알려져 있다.
+
+- blocking 보내기: 송신하는 프로세스는 메시지가 수신 프로세스 또는 메일 박스에 의해 수신될 때까지 봉쇄된다.
+- nonblocking 보내기: 송신하는 프로세스가 메시지를 보내고 작업을 재시작한다.
+- blocking 받기: 메시지가 이용 가능할 때까지 수신 프로세스가 blocking 된다.
+- nonblocking 받기: 송신하는 프로세스가 유효한 메시지 또는 널(null)을 받는다.
+
+### 버퍼링
+
+통신이 직접적이든 간접적이든 간에, 통신하는 프로세스들에 의해 교환되는 메시지는 임시 큐에 들어 있다. 기본적으로 이러한 큐를 구현하는 방식에는 세 가지가 있다.
+
+- zero capacity: 큐의 최대 길이가 0이다. 즉, 링크는 자체 안에 대기하는 메시지들을 가질 수 없다. 이 경우에, 송신자는 수신자가 메시지를 수신할 때까지 기다려야 한다.
+- bounded capacity: 큐의 유한한 길이 n을 가진다. 즉, 최대 n개의 메시지가 그 안에 들어갈 수 있다. 새로운 메시지가 전송될 때 큐가 만원이 아니라면, 메시지는 큐에 놓이며, 송신자는 대기하지 않고 실행을 계속한다. 그렇지만 링크는 유한한 용량을 가지고 있기 때문에 만원이면, 송신자는 큐 안에 공간이 이용 가능할 때까지 blocking 되어야 한다.
+- unbounded capacity: 큐는 잠재적으로 무한한 길이를 가진다. 따라서 메시지들이 얼마든지 큐 안에서 대기할 수 있다. 송신자는 절대 봉쇄되지 않는다.
+
+zero capacity 같은 경우 때때로 버퍼가 없는 메시지 시스템이라고 부른다. 다른 경우들은 자동 버퍼링이라 불린다.
