생각정리중

--- a/docs/project/방슐랭가이드/index.mdx
+++ b/docs/project/방슐랭가이드/index.mdx
@@ -1,8 +1,14 @@
+---
+sidebar_position: 1
+---
+
 import Image from '@site/src/components/Image';
 
 # 방슐랭 가이드
 
 <Image src="https://github.com/back-to-the-basic/interview/assets/63354527/3fc01622-ed1f-438f-b36c-13e30d38f14f" />
+
+<br />
 
 방슐랭 가이드는 `2021.07 ~ 2022.08`에 교내 창업동아리에서 참여한 프로젝트이다.
 방슐랭 가이드는 **1인 가구 중심의 부동산 직거래 플랫폼**으로 기존 부동산의 허위 매물, 과장 광고등과 같은 문제를 해결하기
