--- a/docs/operating-system/혼자 공부하는 운영체제/6.mdx
+++ b/docs/operating-system/혼자 공부하는 운영체제/6.mdx
@@ -48,12 +48,10 @@ export const Image = ({ src, size }) => {
   - 해결방법
     {' '}
     <br />
-    압축: 메모리 내에 저장된 프로세스를 재배치시켜 흩어져 있는 작은 빈 공간들을
-    하나의 큰 빈 공간으로 만드는 방법
-    <br />→ 하나로 모으는 동안 시스템은 하던 일을 중지해야 하고 메모리에 있는
-    내용을 옮기는 작업은 많은 오버헤드를 야기하며 어떤 프로세스를 어떻게
-    움직여야 오버헤드를 최소화하며 압축할 수 있는지에 대한 명확한 방법을
-    결정하기 어렵다.
+    압축: 메모리 내에 저장된 프로세스를 재배치시켜 흩어져 있는 작은 빈 공간들을 하나의 큰 빈 공간으로 만드는 방법
+    <br />→ 하나로 모으는 동안 시스템은 하던 일을 중지해야 하고 메모리에 있는 내용을 옮기는 작업은 많은 오버헤드를
+    야기하며 어떤 프로세스를 어떻게 움직여야 오버헤드를 최소화하며 압축할 수 있는지에 대한 명확한 방법을 결정하기
+    어렵다.
 
 ## 페이징을 통한 가상 메모리 관리
 
@@ -92,12 +90,12 @@ export const Image = ({ src, size }) => {
 - 하나의 페이지 혹은 프레임은 여러 주소를 포괄하고 있다. 따라서 특정 주소에 접근하려면 아래 두 정보가 필요하다.
   - 어떤 페이지 혹은 프레임에 접근하고 싶은지 (페이지 번호)
   - 접근하려는 주소가 그 페이지 혹은 프레임으로부터 얼마나 떨어져 있는지 (변위)
-  즉, 논리 주소 <페이지 번호, 변위>는 페이지 테이블을 통해 물리 주소 <프레임 번호, 변위>로 변환된다.
-  {' '}
-  <Image
-    src="https://user-images.githubusercontent.com/64428916/209499226-af16151c-22e0-4c9f-ba7e-38ac8ed844c7.png"
-    size="700"
-  />
+    즉, 논리 주소 (페이지 번호, 변위)는 페이지 테이블을 통해 물리 주소 (프레임 번호, 변호)로 변환된다.
+    {' '}
+    <Image
+      src="https://user-images.githubusercontent.com/64428916/209499226-af16151c-22e0-4c9f-ba7e-38ac8ed844c7.png"
+      size="700"
+    />
 - 페이지 테이블 엔트리: 페이지 테이블의 각 행들
 
 ## 페이지 교체와 프레임 할당
