--- a/docs/operating-system/면접/프로세스와 스레드/Thread.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/Thread.mdx
@@ -25,13 +25,13 @@ title: Thread
 
 ## 멀티 스레드
 
-{/_ 멀티 스레딩을 지원하는 방법으로는 다대일, 일대일, 다대다 방법이 있다. 일반적으로 사용자가 생성하는
+멀티 스레딩을 지원하는 방법으로는 다대일, 일대일, 다대다 방법이 있다. 일반적으로 사용자가 생성하는
 스레드는 유저 수준 스레드라고 분류하고 실제 시스템에서 실행되는 스레드를 커널 수준 스레드라고 하는데,
 유저 수준 스레드와 커널 수준 스레드를 어떤 방식으로 맵핑하느냐의 차이다. 다대일 모델은 여러 유저 수준
 스레드를 하나의 커널 수준 스레드에 사상하고, 일대일 모델은 유저 수준 스레드마다 커널 수준 스레드에 사상한다.
 다대다 모델은 여러 유저 수준 스레드를 여러 커널 수준 쓰레드에 사상한다. 한 유저 수준 스레드에서 Blocking
 연산을 하는 경우 다른 모든 유저 스레드가 멈춘다는 점에서 다대일 모델은 통용되기 어렵다.
-커널 수준 스레드는 생성하기에 오버헤드가 있으므로 일대일 모델보다는 현실적으로 다대다 모델이 사용된다. _/}
+커널 수준 스레드는 생성하기에 오버헤드가 있으므로 일대일 모델보다는 현실적으로 다대다 모델이 사용된다.
 
 하나의 응용 프로그램에서 여러 스레드를 구성해 각 스레드가 하나의 작업을 처리하는 것
 
@@ -52,10 +52,7 @@ title: Thread
 
 ### 멀티 프로세스 대신 멀티 스레드를 사용하는 이유?
 
-<Image
-  src="https://gmlwjd9405.github.io/images/os-process-and-thread/multi-thread.png"
-  width="500px"
-/>
+<Image src="https://gmlwjd9405.github.io/images/os-process-and-thread/multi-thread.png" width="500px" />
 
 - 프로그램을 여러개 키는 것보다 하나의 프로그램 안에서 여러 작업을 해결하는 것이다.
 
