--- a/docs/operating-system/면접/프로세스와 스레드/Thread.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드/Thread.mdx
@@ -2,6 +2,8 @@
 title: Thread
 ---
 
+import Image from '@site/src/components/Image';
+
 # Thread
 
 스레드는 프로세스 내에서 실행되는 여러 흐름의 단위이다. 스레드마다 다른 실행 흐름을 가지기 때문에 각자
