--- a/docs/web/브라우저는 어떻게 동작하는가.mdx
+++ b/docs/web/브라우저는 어떻게 동작하는가.mdx
@@ -3,6 +3,8 @@ title: 브라우저가 어떻게 동작하는지 설명해주세요.
 slug: behind-the-scenes-of-modern-web-browser
 ---
 
+import Image from '@site/src/components/Image';
+
 브라우저의 주요 기능은 사용자가 선택한 자원을 서버에 요청하고 브라우저에 표시하는 것이다.
 자원은 보통 HTML 문서이지만 PDF나 이미지 또는 다른 형태일 수 있다.
 자원의 주소는 URI(Unifrom Resource Identifier)에 의해 정해진다.
@@ -12,10 +14,7 @@ W3C(World Wide Web Consortium)에서 정한다.
 
 ## 브라우저의 기본 구조
 
-<Image
-  src="https://d2.naver.com/content/images/2015/06/helloworld-59361-1.png"
-  width="500px"
-/>
+<Image src="https://d2.naver.com/content/images/2015/06/helloworld-59361-1.png" width="500px" />
 
 1. 사용자 인터페이스: 주소 표시줄, 이전/다음 버튼, 북마크 메뉴등. 요청한 페이지를 보여주는 창을
    제외한 나머지 모든 부분이다.
