--- a/docs/javascript/var-let-const.mdx
+++ b/docs/javascript/var-let-const.mdx
@@ -1,1 +1,7 @@
 var, let, const에 대해서 설명해주세요
+
+- var는 변수를 중복 선언할 수 있다. 이는 의도치 않게 먼저 선언된 변수의 값을 변경할 수 있는 부작용이 있다.
+- let과 const로 선언된 변수는 같은 스코프 내에서 중복 선언을 허용하지 않는다.
+- var는 함수 레벨 스코프를 갖는다. 이는 전역 변수를 남발할 가능성을 높인다. 의도치 않은 전역 변수의 중복 선언을 발생시킨다.
+- let과 const는 블록 레벨 스코프를 갖는다.
+- const 키워드로 선언한 변수는 반드시 선언과 동시에 초기화해야 한다.
