--- a/docs/javascript/TDZ.mdx
+++ b/docs/javascript/TDZ.mdx
@@ -2,7 +2,7 @@ import Image from '@site/src/components/Image';
 
 # TDZ
 
-Temporal Dead Zone란 한글로 직역하자면 일시적 사각지대라는 뜻이다. 이 일시적인 사각지대는 스코프의
+**Temporal Dead Zone**란 한글로 직역하자면 일시적 사각지대라는 뜻이다. 이 일시적인 사각지대는 스코프의
 시작 지점부터 초기화 시작 지점까지의 구간을 TDZ(Temporal Dead Zone)라고 한다.
 
 JavaScript에서 변수는 선언, 초기화, 할당이라는 세 단계를 거친다.
