--- a/docs/network/면접/naver.com.mdx
+++ b/docs/network/면접/naver.com.mdx
@@ -24,6 +24,11 @@ URL인지를 판단한다.
 
 만약 검색어를 입력했다면 사용자가 선택한 검색 엔진의 URL과 조합하여 새로운 URL 형태로 변환하게 된다.
 
+- 사용자가 URL을 입력할 경우 브라우저 프로세스에서 제일 먼저 작업이 시작된다. 브라우저 프로세스는 UI를 그리는 UI 스레드,
+  네트워크 통신을 위한 네트워크 스레드, 파일에 접근하기 위한 스토리즈 스레드등이 존재한다.
+- 검색어일 경우 검색 엔진 URL에 검색어를 결합해 페이지를 이동시키며 URL일 경우 네트워크 호출을 수행한다.
+  이때부터 브라우저에는 로딩이 되고 있다는 표시가 나타나게 된다. 동시에 네트워크 스레드는 적절한 프로토콜로 요청을 처리하기 시작한다.
+
 ## Start Navigation
 
 유저가 엔터를 입력하면 UI 스레드가 컨텐츠를 가져오기 위한 네트워크 요청을 시작한다.(Network thread
@@ -69,7 +74,7 @@ ip를 찾는다.
 
 - header의 Content-Type과 실제 응답받은 데이터 형식이 다를 수 있기에 [MIME 스니핑](https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types)을 실행하여 데이터의
   실제 형식을 알아낸다.
-- 응답이 HTML 파일이라면, 렌더러 프로세스에게 전달하고, 렌더러 프로세스가 다룰 수 없는 데이터 형식(zip파일 또는 다른 타입의 파일)
+- 응답이 HTML 파일이거나 PDF라면, 렌더러 프로세스에게 전달하고, 렌더러 프로세스가 다룰 수 없는 데이터 형식(zip파일 또는 다른 타입의 파일)
   이라면 다운로드 매니저에게 데이터를 전달한다.
 
 <Image
