--- a/docs/javascript/this.mdx
+++ b/docs/javascript/this.mdx
@@ -17,6 +17,9 @@ description: 임시
 L.E의 프로퍼티로 저장한다. 이후 어떤 변수를 호출하면 L.E를 조회해서 일치하는 프로퍼티가
 있을 경우 그 값을 반환한다. 전역 컨텍스트의 경우 L.E는 전역 객체를 그대로 참조한다.
 
+화살표 함수는 실행 컨텍스트 생성 시 this 바인딩하는 과정이 없다. 즉, 이 함수 내부에는 this가 아예 없으며,
+접근하고자 하면 스코프 체인상 가장 가까운 this에 접근한다
+
 ## Referecne
 
 - 코어 자바스크립트
