--- a/docs/web/브라우저는 어떻게 동작하는가.mdx
+++ b/docs/web/브라우저는 어떻게 동작하는가.mdx
@@ -46,6 +46,9 @@ W3C(World Wide Web Consortium)에서 정한다.
 
 ### CSSOM 트리 구축
 
+CSSOM 트리는 DOM 트리와 달리, CSS를 모두 파싱한 후에 구성할 수 있다. 만약 CSSOM 트리가 완전히 구성되지 않았다면
+렌더트리를 만들지 못하기 때문에 브라우저 렌더링이 차단된다.
+
 ### 렌더 트리 구축
 
 - DOM 트리와 CSSOM 트리가 결합되어 렌더링 트리를 형성한다.
@@ -77,6 +80,12 @@ repaint를 발생시키는 속성: background, background-image, background-posi
 transform, opacity와 같은 속성을 사용하면 해당 요소를 별도의 레이어로 분리하고 작업을 GPU에 위임하여 처리함으로써 레이아웃 단계와 페인트 단계를 건너뛸 수 있다. 이것을 하드웨어 가속(GPU 가속)이라고 한다.
 
 특정 요소에 하드웨어 가속을 사용하려면 요소를 별도의 레이어로 분리하여 GPU로 보내야 하는데, transform 속성과 opacity 속성이 이 역할을 한다. 분리된 레이어는 GPU에 의해 처리되어 레이아웃 단계와 페인트 단계 없이 화면상의 요소의 스타일을 변경할 수 있다.
+
+분리된 레이어는 GPU에 의해 처리되어 레이아웃 단계와 페인트 단계 없이 화면상의 요소의 스타일을 변경할 수 있다. 따라서 리플로우와 리페인트를 일으키는 width, height, color 등의 속성이 아닌 transform 또는 opacity 속성을 이용한 애니메이션 성능이 더 좋을 수 밖에 없다.
+
+:::tip
+transform: translate()는 처음부터 레이어를 분리하지 않고 변화가 일어나는 순간 레이어를 분리한다. 반면에 trasnform: translate3d() 또는 scale3d()와 같은 3d 속성들, 또는 will-change 속성은 처음부터 레이어를 분리해두기 때문에 변화에 더욱 빠르게 대처할 수 있다. 물론 레이어가 많아지면 그만큼 메모리를 많이 사용하기 때문에 주의해야한다.
+:::
 
 ## Reference
 
